Added Bootstrap Datepicker

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,7 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "font-awesome";
+@import "bootstrap-datetimepicker";
 
 /* Vertical spacing (Margins) */
 /* From the top */
