--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -18,6 +18,28 @@
 			<%= f.label :description %><br/>
 			<%= f.text_area :description, class: "form-control" %>
 		</div>
+
+		<div class="col-lg-6 col-md-6">
+        <div class="form-group">
+            <div class='input-group date' id='datetimepicker6'>
+                <input type='text' class="form-control" />
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
+        </div>
+    </div>
+		<div class="col-lg-6 col-md-6">
+        <div class="form-group">
+            <div class='input-group date' id='datetimepicker7'>
+                <input type='text' class="form-control" />
+                <span class="input-group-addon">
+                    <span class="glyphicon glyphicon-calendar"></span>
+                </span>
+            </div>
+        </div>
+    </div>
+
 		<div class="form-inline">
 			<div class="form-group">
 				<%= f.label :finished %>
