Linked task actions to show on index

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,13 +33,13 @@
                 			<p class="vspace-top-10 vspace-bottom-20">Filters</p>
                       <ul id="filter-list">
                         <li>
-                          <%= link_to "", class:"full-width-block" do %>
+                          <%= link_to tasks_path(starred: true), class:"full-width-block" do %>
                             <span class="fa fa-star" aria-hidden="true"></span> 
                             <span class="hspace-left-15">Starred</span>
                           <% end %>
                         </li>
                         <li>
-                          <%= link_to "", class:"vspace-top-5 vspace-bottom-5 full-width-block" do %>
+                          <%= link_to tasks_path(important: true), class:"vspace-top-5 vspace-bottom-5 full-width-block" do %>
                             <span class="fa fa-exclamation-circle" aria-hidden="true"></span> 
                             <span class="hspace-left-15">Priority</span>
                           <% end %>
@@ -57,7 +57,7 @@
                           <% end %>
                         </li>
                         <li>
-                          <%= link_to "", class:"vspace-top-5 vspace-bottom-5 full-width-block" do %>
+                          <%= link_to tasks_path(finished: true), class:"vspace-top-5 vspace-bottom-5 full-width-block" do %>
                             <span class="fa fa-check" aria-hidden="true"></span> 
                             <span class="hspace-left-15">Done</span>
                           <% end %>
