--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -1,13 +1,16 @@
 $(".modal-window").html("<%= escape_javascript(render 'new') %>");
 $(function () {
-  $('#datetimepicker6').datetimepicker();
-  $('#datetimepicker7').datetimepicker({
-      useCurrent: false //Important! See issue #1075
+	$('#datetimepicker1').datetimepicker({ 
+	  	format: 'L'
+	});
+	$('#datetimepicker2').datetimepicker({
+	    useCurrent: false, //Important! See issue #1075
+	    format: 'L'
+	});
+  $("#datetimepicker1").on("dp.change", function (e) {
+      $('#datetimepicker2').data("DateTimePicker").minDate(e.date);
   });
-  $("#datetimepicker6").on("dp.change", function (e) {
-      $('#datetimepicker7').data("DateTimePicker").minDate(e.date);
-  });
-  $("#datetimepicker7").on("dp.change", function (e) {
-      $('#datetimepicker6').data("DateTimePicker").maxDate(e.date);
+  $("#datetimepicker2").on("dp.change", function (e) {
+      $('#datetimepicker1').data("DateTimePicker").maxDate(e.date);
   });
 });
