--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,8 +21,8 @@
 
 		<div class="col-lg-6 col-md-6">
         <div class="form-group">
-            <div class='input-group date' id='datetimepicker6'>
-                <input type='text' class="form-control" />
+            <div class='input-group date' id='datetimepicker1'>
+                <%= f.text_field :start_date, class:"form-control" %>
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
                 </span>
@@ -31,8 +31,8 @@
     </div>
 		<div class="col-lg-6 col-md-6">
         <div class="form-group">
-            <div class='input-group date' id='datetimepicker7'>
-                <input type='text' class="form-control" />
+            <div class='input-group date' id='datetimepicker2'>
+                <%= f.text_field :due_date, class:"form-control" %>
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
                 </span>
