--- a/app/views/tasks/new.js.erb
+++ b/app/views/tasks/new.js.erb
@@ -1,11 +1,11 @@
 $(".modal-window").html("<%= escape_javascript(render 'new') %>");
 $(function () {
 	$('#datetimepicker1').datetimepicker({ 
-	  	format: 'L'
+	  	format: 'YYYY-MM-DD'
 	});
 	$('#datetimepicker2').datetimepicker({
 	    useCurrent: false, //Important! See issue #1075
-	    format: 'L'
+	    format: 'YYYY-MM-DD'
 	});
   $("#datetimepicker1").on("dp.change", function (e) {
       $('#datetimepicker2').data("DateTimePicker").minDate(e.date);
