Removed flags from the navigation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,8 @@
                           <% end %>
                         </li>
                       </ul>
+                      <p class="vspace-top-10 vspace-bottom-20">Tags</p>
+                      
                     </div>
               		</div>
               	</div>
