added tag filters to tasks

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -132,7 +132,7 @@
 	display: block;
 }
 
-ul#filter-list li {
+ul.filter-list li {
 	list-style-type: none;
 	margin: 7px 0 7px -37px;
 	display: block;
