--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="modal-body">	
+<div class="modal-body">
 	<%= form_for @task do |f| %>
 		<% if @task.errors.any? %>
 	      <div id="error_explanation">
@@ -10,7 +10,6 @@
 	        </ul>
 	      </div>
 	  <% end %>
-	  
 		<div class="form-group">
 			<%= f.label :title %><br/>
 			<%= f.text_field :title, class: "form-control" %>
@@ -22,6 +21,7 @@
 
 		<div class="col-lg-6 col-md-6">
         <div class="form-group">
+            <%= f.label 'Start Date' %>
             <div class='input-group date' id='datetimepicker1'>
                 <%= f.text_field :start_date, class:"form-control" %>
                 <span class="input-group-addon">
@@ -32,8 +32,8 @@
     </div>
 		<div class="col-lg-6 col-md-6">
         <div class="form-group">
+            <%= f.label 'Due Date' %>
             <div class='input-group date' id='datetimepicker2'>
-            	
                 <%= f.text_field :due_date, class:"form-control" %>
                 <span class="input-group-addon">
                     <span class="glyphicon glyphicon-calendar"></span>
@@ -62,6 +62,5 @@
 		<div class="text-center">
 			<%= f.submit "Save", class:"btn btn-md btn-primary" %>
 		</div>
-  
 	<% end %>
 </div>
